myApp/www/css/style.css
/* Empty. Add your own CSS if you like */


.chatbox {
    position:absolute;
    bottom: 0px;
}
.message-input {
    margin-top: 10px;
}

.chatbox-container {
    font-size: 1.2rem;
    color: rgba(0,0,0,0.8);
    position:relative;
    height: 200px;
    border: 1px solid rgba(0,0,255, 0.2);
    padding: 20px;
    line-height: 29px;
    overflow: hidden;
}
/*styling for all the h2 elements in the app*/
h2 {
    color:#0099CC;
    font-weight: bold;
}

/*styling for the badges on the menu page*/
.item .icon .icon-badge {
  position: absolute;
  top: 3px;
  right: 0px;
  font-size: 8px;
}

.item-thumbnail-left, .item-thumbnail-left .item-content {
  padding-left: 106px;
  min-height: 95px; }

  .item-thumbnail-left > img:first-child, .item-thumbnail-left .item-image, .item-thumbnail-left .item-content > img:first-child, .item-thumbnail-left .item-content .item-image {
    position: absolute;
    top: 10px;
    left: 10px;
    max-width: 80px;
    max-height: 80px;
    width: 100%; }



/*fake status bar*/
.tab-item.tab-item-active, .tab-item.active, .tab-item.activated {
    color:  #0099CC;
}


.fake-statusbar {
  height: 20px;
  max-height: 20px;
  font-size: 12px;
  box-sizing: border-box;
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 4;
  color: #fff;
  padding: 2px 3px 3px 3px;

}
.fake-statusbar .time {
  position: absolute;
  width: 100%;
  height: 100%;
  text-align: center;
}
.fake-statusbar .pull-left { float: left; }
.fake-statusbar .pull-right { float: right; }

.bar-header {
  height: 64px !important;
}
.bar-header > * {
  margin-top: 20px !important;
}

.scroll-content{
  top:0 !important
}

/* Discover page stylings */
.discover-page {

}

.discover-page .current-song {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  opacity: 1;

  -webkit-transition:all cubic-bezier(0.420, 0.000, 1.000, 1.000) 0.1s;
  transition:all cubic-bezier(0.420, 0.000, 1.000, 1.000) 0.1s;
}

.discover-page .current-song .item-image {
  max-height:300px;
  overflow:hidden;
}

@media screen and (max-height: 600px) {
  .discover-page .current-song .item-image {
    max-height:200px;
    overflow:hidden;
  }
}

.discover-page .current-song.favorited.ng-hide {
  -webkit-transform: translateX(1000px) rotate(50deg);
  -ms-transform: translateX(1000px) rotate(50deg);
  transform: translateX(1000px) rotate(50deg);
  opacity:0;
}

.discover-page .current-song.skipped.ng-hide {
  -webkit-transform: translateX(-1000px) rotate(-50deg);
  -ms-transform: translateX(-1000px) rotate(-50deg);
  transform: translateX(-1000px) rotate(-50deg);
  opacity:0;
}

.discover-page .current-song.ng-hide-add {
  -webkit-transition:all cubic-bezier(0.420, 0.000, 1.000, 1.000) 0.3s;
  transition:all cubic-bezier(0.420, 0.000, 1.000, 1.000) 0.3s;
  display:block!important;
}

.discover-page .current-song.ng-hide-remove {
  -webkit-transform: scale(0.7) translateX(0px) rotate(0deg);
  -ms-transform: scale(0.7) translateX(0px) rotate(0deg);
  transform: scale(0.7) translateX(0px) rotate(0deg);
  opacity: 0;
}


.discover-page .img-lookahead img {
  height:1px;
  width:1px;
  opacity:0.01;
}

/* Overlay styling*/

.overlayBox {
    position: absolute;
    left: 50%;
    height: 98%;
    width: 100%;
    top: -80px;
    opacity: 0;
    margin: 80px 0 0 -149px;
}

.boxed {
    height: 50px;
    width: 100px;
    padding: 10px;
    border-radius: 6px;
    font-size: 30px;
}

.yes-text {
    background-color: rgba(0,256,0,0.2);
}

.yesBox {
    margin: 10% 60% 0% 10%;
    border: 2px solid #00FF00;
    color: rgb(0, 256, 0);
    -webkit-transform: rotate(-25deg);
}

.no-text {
    background-color: rgba(256,0,0,0.2);
}

.noBox {
    margin: 10% 10% 0% 60%;
    border: 2px solid #FF0000;
    color: rgb(256, 0, 0);
    -webkit-transform: rotate(25deg);
}

.fade {
    -webkit-transition: 0.2s opacity linear;
    transition: 0.2s opacity linear;
    opacity: 0;
}
/*IMAGES*/
.image-list-thumb {
    padding: 2px 2px 2px 2px;
    height: 70px;
}

.image-modal {
    width: 100% !important;
    height: 100%;
    top: 0 !important;
    left: 0 !important;
}

.transparent {
    background: transparent !important;
}

.fullscreen-image {
    max-width: 100%;
    max-height: 100%;
    bottom: 0;
    left: 0;
    margin: auto;
    overflow: auto;
    position: fixed;
    right: 0;
    top: 0;
}

.slider {
    width: 100%;
    height: 100%;
}

.centerme {
    margin: 0 auto;
    width: 100%;
    height:100%;
}

.fullscreen-player {
    max-width: 100%;
    max-height: 100%;
    bottom: 0;
    left: 0;
    margin: auto;
    overflow: none;
    position: fixed;
    right: 0;
    top: 0;
}

p.info {
  position: absolute;
  bottom: 55px;
  margin: 0 auto;
  width: 100%;
  display: block;
  text-align: center;
  font-size: 28px;
  color: #ffffff;
}

#tour .slider {
  height: 100%;
}
#tour .slider-slide {
  padding-top: 100px;
  text-align: center;
}
#tour .icon-slide {
  font-size: 20em;
  display: inline-block;
}

